@@ -19,7 +19,8 @@ Build-Depends: cdbs, debhelper (>= 5), sharutils, m4,
 	libhunspell-dev,
 	libdbus-glib-1-dev (>= 0.60),
 	xulrunner-1.9-dev (>= 1.9~b5~), xulrunner-1.9-dev (<< 1.9~b6~),
-	libnspr4-dev, libnss3-dev
+	libnspr4-dev, libnss3-dev,
+	mozilla-devscripts
 Standards-Version: 3.7.3
 
 Package: firefox-3.0
